--- a/deploy.spryker-69new.yml
+++ b/deploy.spryker-69new.yml
@@ -65,13 +65,11 @@ composer:
     autoload: ''
 
 assets:
-    image: fholzer/nginx-brotli:v1.18.0
+    image: spryker/nginx-brotli:latest
     mode: production
     compression:
         brotli:
-            static: only
-        gzip:
-            static: true
+            static: on
             level: 5
 
 regions:
