--- a/deploy.yml
+++ b/deploy.yml
@@ -23,10 +23,11 @@ composer:
     autoload: --classmap-authoritative
 
 assets:
+    image: spryker/nginx-brotli:latest
     mode: production
     compression:
-        gzip:
-            static: true
+        brotli:
+            static: on
             level: 5
 
 regions:
