--- a/codeception.yml
+++ b/codeception.yml
@@ -8,7 +8,7 @@ include:
 
 paths:
     tests: tests
-    log: tests/_output
+    output: tests/_output
     data: tests/_data
     support: tests/_support
     envs: tests/_envs
