--- a/composer.json
+++ b/composer.json
@@ -106,8 +106,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5.2",
-        "codeception/codeception": "^4.2.0",
-        "codeception/lib-innerbrowser": "^1.3.2",
+        "codeception/codeception": "^5.0.2",
+        "codeception/lib-innerbrowser": "^3.1.2",
         "spryker/architecture-sniffer": "dev-master",
         "spryker/development-core": "dev-master",
         "spryker/code-sniffer": "dev-master",
@@ -127,17 +127,17 @@
         "spryker-sdk/spryk": "dev-master as 0.4.6",
         "dms/phpunit-arraysubset-asserts": "^0.4.0",
         "codeception/phpunit-wrapper": "^9.0.0",
-        "codeception/module-rest": "^1.0",
-        "codeception/module-phpbrowser": "^1.0.1",
-        "codeception/module-asserts": "^1.3.0",
-        "codeception/module-webdriver": "^1.1.0",
-        "codeception/module-cli": "^1.0.2",
-        "codeception/module-filesystem": "^1.0.2",
-        "codeception/stub": "^3.7.0",
+        "codeception/module-rest": "^3.1.0",
+        "codeception/module-phpbrowser": "^3.0.0",
+        "codeception/module-asserts": "^3.0.0",
+        "codeception/module-webdriver": "^3.1.1",
+        "codeception/module-cli": "^2.0.0",
+        "codeception/module-filesystem": "^3.0.0",
+        "codeception/stub": "^3.7.0 || ^4.0",
         "psalm/phar": "^4.3.1",
         "sebastian/diff": "*",
         "phpstan/phpstan": "1.8.10",
-        "symfony/browser-kit": "~5.1.8",
+        "symfony/browser-kit": "~5.1.8  || ^5.4",
         "nette/neon": "^3.2.1",
         "spryker-sdk/benchmark": "dev-master",
         "spryker/docker-chromedriver": "dev-master",
