--- a/tests/PyzTest/Glue/CustomerAccess/codeception.yml
+++ b/tests/PyzTest/Glue/CustomerAccess/codeception.yml
@@ -4,7 +4,7 @@ paths:
     tests: .
     data: _data
     support: _support
-    log: _output
+    output: _output
 
 coverage:
     enabled: true
@@ -13,7 +13,7 @@ coverage:
 
 suites:
     RestApi:
-        class_name: CustomerAccessApiTester
+        actor: CustomerAccessApiTester
         modules:
             enabled:
                 - \PyzTest\Shared\Testify\Helper\Environment
