--- a/tests/PyzTest/Yves/Cart/codeception.yml
+++ b/tests/PyzTest/Yves/Cart/codeception.yml
@@ -4,7 +4,7 @@ paths:
     tests: .
     data: _data
     support: _support
-    log: _output
+    output: _output
 
 coverage:
     enabled: true
@@ -17,7 +17,7 @@ coverage:
 suites:
     Controller:
         path: .
-        class_name: CartControllerTester
+        actor: CartControllerTester
         modules:
             enabled:
                 - \SprykerTest\Yves\Testify\Helper\YvesEnvironment
