--- a/tests/PyzTest/Yves/CartItems/codeception.yml
+++ b/tests/PyzTest/Yves/CartItems/codeception.yml
@@ -5,7 +5,7 @@ paths:
     tests: .
     data: _data
     support: _support
-    log: _output
+    output: _output
 
 
 coverage:
@@ -22,7 +22,7 @@ coverage:
 suites:
     Presentation:
         path: Presentation
-        class_name: CartItemsPresentationTester
+        actor: CartItemsPresentationTester
         modules:
             enabled:
                 - Asserts
