--- a/tests/PyzTest/Yves/Newsletter/codeception.yml
+++ b/tests/PyzTest/Yves/Newsletter/codeception.yml
@@ -5,7 +5,7 @@ paths:
     tests: .
     data: _data
     support: _support
-    log: _output
+    output: _output
 
 coverage:
     enabled: true
@@ -21,7 +21,7 @@ coverage:
 suites:
     Presentation:
         path: Presentation
-        class_name: NewsletterPresentationTester
+        actor: NewsletterPresentationTester
         modules:
             enabled:
                 - \PyzTest\Shared\Testify\Helper\Environment
