--- a/tests/PyzTest/Zed/Acl/codeception.yml
+++ b/tests/PyzTest/Zed/Acl/codeception.yml
@@ -4,7 +4,7 @@ paths:
     tests: .
     data: _data
     support: _support
-    log: _output
+    output: _output
 
 coverage:
     enabled: true
@@ -14,7 +14,7 @@ coverage:
 suites:
     Communication:
         path: Communication
-        class_name: AclCommunicationTester
+        actor: AclCommunicationTester
         modules:
             enabled:
                 - Asserts
