--- a/composer.json
+++ b/composer.json
@@ -1053,15 +1053,15 @@
         "spryker/zed-ui": "^1.0.0"
     },
     "require-dev": {
-        "codeception/codeception": "^4.1.8",
-        "codeception/module-asserts": "^1.3.0",
-        "codeception/module-cli": "^1.0.2",
-        "codeception/module-filesystem": "^1.0.2",
-        "codeception/module-phpbrowser": "^1.0.1",
-        "codeception/module-rest": "^1.0",
-        "codeception/module-webdriver": "^1.1.0",
+        "codeception/codeception": "^5.0.2",
+        "codeception/module-asserts": "^3.0.0",
+        "codeception/module-cli": "^2.0.0",
+        "codeception/module-filesystem": "^3.0.0",
+        "codeception/module-phpbrowser": "^3.0.0",
+        "codeception/module-rest": "^3.1.0",
+        "codeception/module-webdriver": "^3.1.1",
         "codeception/phpunit-wrapper": "^8.1.2 || ^9.0.0",
-        "codeception/stub": "^3.7.0",
+        "codeception/stub": "^3.7.0 || ^4.0",
         "composer/package-versions-deprecated": "^1.8.0",
         "filp/whoops": "^2.7",
         "jetbrains/phpstorm-stubs": "dev-master",
