--- a/composer.json
+++ b/composer.json
@@ -193,7 +193,7 @@
         "spryker/api-extension": "^0.1.0",
         "spryker/api-query-builder": "^0.1.0",
         "spryker/app-catalog-gui": "^1.0.0",
-        "spryker/application": "^3.0.0",
+        "spryker/application": "dev-master as 3.30.1",
         "spryker/assertion": "^3.0.0",
         "spryker/asset": "^1.0.0",
         "spryker/asset-storage": "^1.0.0",
@@ -319,7 +319,7 @@
         "spryker/cms-slot-store-connector": "^1.0.0",
         "spryker/cms-storage": "^2.0.0",
         "spryker/cms-user-connector": "^1.1.0",
-        "spryker/collector": "^6.0.0",
+        "spryker/collector": "dev-master as 6.7.1",
         "spryker/collector-search-connector": "^1.0.0",
         "spryker/collector-storage-connector": "^1.0.0",
         "spryker/comment": "^1.0.0",
@@ -428,7 +428,7 @@
         "spryker/dashboard-merchant-portal-gui-extension": "^1.0.0",
         "spryker/data-export": "^0.1.0",
         "spryker/data-export-extension": "^0.1.0",
-        "spryker/data-import": "^1.0.0",
+        "spryker/data-import": "dev-master as 1.19.1",
         "spryker/dataset": "^1.0.0",
         "spryker/discount": "^9.17.0",
         "spryker/discount-calculation-connector": "^5.2.0",
@@ -455,7 +455,7 @@
         "spryker/error-handler-extension": "^1.0.0",
         "spryker/event": "^2.0.0",
         "spryker/event-behavior": "^1.0.0",
-        "spryker/event-dispatcher": "^1.3.0",
+        "spryker/event-dispatcher": "dev-master as 1.3.2",
         "spryker/event-dispatcher-extension": "^1.0.0",
         "spryker/file-manager": "^2.0.0",
         "spryker/file-manager-data-import": "^2.0.0",
@@ -467,7 +467,7 @@
         "spryker/flysystem-aws3v3-file-system": "^2.0.0",
         "spryker/flysystem-ftp-file-system": "^2.0.0",
         "spryker/flysystem-local-file-system": "^2.0.0",
-        "spryker/form": "^1.0.0",
+        "spryker/form": "dev-master as 1.1.2",
         "spryker/form-extension": "^1.0.0",
         "spryker/gift-card": "^1.6.0",
         "spryker/gift-card-balance": "^1.0.0",
@@ -489,7 +489,7 @@
         "spryker/graceful-runner": "^1.0.0",
         "spryker/graph": "^3.0.0",
         "spryker/graphviz": "^2.0.0",
-        "spryker/gui": "^3.0.0",
+        "spryker/gui": "dev-master as 3.45.2",
         "spryker/gui-table": "^1.0.0",
         "spryker/guzzle": "^2.0.0",
         "spryker/health-check": "^1.0.0",
@@ -594,7 +594,7 @@
         "spryker/merchant-user-password-reset-mail": "^1.0.0",
         "spryker/merchants-rest-api": "^1.0.0",
         "spryker/merchants-rest-api-extension": "^1.0.0",
-        "spryker/message-broker": "^1.0.0",
+        "spryker/message-broker": "dev-master as 1.2.1",
         "spryker/message-broker-aws": "^1.0.0",
         "spryker/message-broker-extension": "^1.0.0",
         "spryker/messenger": "^3.6.2",
@@ -708,7 +708,7 @@
         "spryker/product-attribute-gui": "^1.0.0",
         "spryker/product-attributes-rest-api": "^1.0.0",
         "spryker/product-availabilities-rest-api": "^4.2.0",
-        "spryker/product-barcode": "^1.1.2",
+        "spryker/product-barcode": "dev-master as 1.1.2",
         "spryker/product-barcode-gui": "^1.0.0",
         "spryker/product-bundle": "^7.9.0",
         "spryker/product-bundle-carts-rest-api": "^1.0.0",
@@ -852,17 +852,17 @@
         "spryker/products-categories-resource-relationship": "^1.0.0",
         "spryker/products-rest-api": "^2.14.0",
         "spryker/products-rest-api-extension": "^1.0.0",
-        "spryker/propel": "^3.31.2",
+        "spryker/propel": "dev-master as 3.35.1",
         "spryker/propel-orm": "^1.0.0",
         "spryker/propel-orm-extension": "^1.0.0",
         "spryker/propel-query-builder": "^0.3.0",
         "spryker/propel-replication-cache": "^1.0.0",
-        "spryker/publish-and-synchronize-health-check": "^1.0.0",
+        "spryker/publish-and-synchronize-health-check": "dev-master as 1.0.2",
         "spryker/publish-and-synchronize-health-check-search": "^1.0.0",
         "spryker/publish-and-synchronize-health-check-storage": "^1.0.0",
-        "spryker/publisher": "^1.2.0",
+        "spryker/publisher": "dev-master as 1.2.1",
         "spryker/publisher-extension": "^1.0.0",
-        "spryker/queue": "^1.9.0",
+        "spryker/queue": "dev-master as 1.9.2",
         "spryker/quick-order": "^3.0.0",
         "spryker/quick-order-extension": "^1.0.0",
         "spryker/quote": "^2.15.1",
@@ -886,7 +886,7 @@
         "spryker/resource-share": "^1.0.0",
         "spryker/resource-share-extension": "^1.0.0",
         "spryker/rest-request-validator": "^1.3.4",
-        "spryker/router": "^1.0.0",
+        "spryker/router": "dev-master as 1.14.1",
         "spryker/router-extension": "^1.0.0",
         "spryker/sales": "^11.27.1",
         "spryker/sales-configurable-bundle": "^1.5.0",
@@ -897,7 +897,7 @@
         "spryker/sales-merchant-portal-gui": "^1.0.0",
         "spryker/sales-merchant-portal-gui-extension": "^1.0.0",
         "spryker/sales-oms": "^0.1.0",
-        "spryker/sales-order-threshold": "^1.0.0",
+        "spryker/sales-order-threshold": "dev-master as 1.7.1",
         "spryker/sales-order-threshold-data-import": "^0.1.0",
         "spryker/sales-order-threshold-extension": "^1.0.0",
         "spryker/sales-order-threshold-gui": "^1.0.0",
@@ -925,7 +925,7 @@
         "spryker/scheduler": "^1.2.0",
         "spryker/scheduler-extension": "^1.0.0",
         "spryker/scheduler-jenkins": "^1.0.0",
-        "spryker/search": "^8.0.0",
+        "spryker/search": "dev-master as 8.19.1",
         "spryker/search-elasticsearch": "^1.13.0",
         "spryker/search-elasticsearch-gui": "^1.0.0",
         "spryker/secrets-manager": "^1.0.0",
@@ -988,7 +988,7 @@
         "spryker/stock-data-import": "^1.0.0",
         "spryker/stock-extension": "^1.0.0",
         "spryker/stock-gui": "^2.0.0",
-        "spryker/storage": "^3.0.0",
+        "spryker/storage": "dev-master as 3.19.1",
         "spryker/storage-database": "^1.0.0",
         "spryker/storage-database-extension": "^1.0.0",
         "spryker/storage-extension": "^1.0.0",
@@ -1008,10 +1008,10 @@
         "spryker/tax-product-storage": "^1.0.0",
         "spryker/tax-storage": "^1.0.0",
         "spryker/touch": "^4.0.0",
-        "spryker/transfer": "^3.0.0",
+        "spryker/transfer": "dev-master as 3.33.1",
         "spryker/translator": "^1.0.0",
         "spryker/translator-extension": "^1.0.0",
-        "spryker/twig": "^3.0.0",
+        "spryker/twig": "dev-master as 3.17.2",
         "spryker/twig-extension": "^1.0.0",
         "spryker/up-selling-products-rest-api": "^1.0.0",
         "spryker/url": "^3.0.0",
@@ -1038,7 +1038,7 @@
         "spryker/util-uuid-generator": "^1.0.0",
         "spryker/uuid": "^1.0.0",
         "spryker/uuid-behavior": "^1.0.0",
-        "spryker/validator": "^1.0.0",
+        "spryker/validator": "dev-master as 1.1.2",
         "spryker/validator-extension": "^1.0.0",
         "spryker/vault": "^1.0.0",
         "spryker/weekday-schedule": "^1.0.0",
@@ -1046,9 +1046,9 @@
         "spryker/wishlist-extension": "^1.3.0",
         "spryker/wishlists-rest-api": "^1.6.0",
         "spryker/wishlists-rest-api-extension": "^1.1.0",
-        "spryker/zed-navigation": "^1.12.0",
+        "spryker/zed-navigation": "dev-master as 1.12.1",
         "spryker/zed-navigation-extension": "^1.0.0",
-        "spryker/zed-request": "^3.17.0",
+        "spryker/zed-request": "dev-master as 3.18.1",
         "spryker/zed-request-extension": "^1.0.0",
         "spryker/zed-ui": "^1.0.0"
     },
