Added spryker/container to require section

--- a/composer.json
+++ b/composer.json
@@ -1050,7 +1050,8 @@
         "spryker/zed-navigation-extension": "^1.0.0",
         "spryker/zed-request": "dev-master as 3.18.1",
         "spryker/zed-request-extension": "^1.0.0",
-        "spryker/zed-ui": "^1.0.0"
+        "spryker/zed-ui": "^1.0.0",
+        "spryker/container": "dev-master as 1.4.6"
     },
     "require-dev": {
         "codeception/codeception": "^5.0.2",
