--- a/composer.json
+++ b/composer.json
@@ -405,7 +405,7 @@
         "spryker/csv": "^3.0.0",
         "spryker/currency": "^3.13.0",
         "spryker/currency-extension": "^1.0.0",
-        "spryker/customer": "^7.37.0",
+        "spryker/customer": "dev-master as 7.47.1",
         "spryker/customer-access": "^1.0.0",
         "spryker/customer-access-gui": "^1.0.0",
         "spryker/customer-access-permission": "^1.2.2",
