Fixed codeception config

--- a/tests/PyzTest/Yves/Application/codeception.yml
+++ b/tests/PyzTest/Yves/Application/codeception.yml
@@ -14,7 +14,7 @@ coverage:
 suites:
     Controller:
         path: .
-        class_name: ApplicationControllerTester
+        actor: ApplicationControllerTester
         modules:
             enabled:
                 - \SprykerTest\Yves\Testify\Helper\YvesEnvironment
