FRW-229: Remove Swiftmailer dependency  (#7174)
FRW-229 Remove Swiftmailer dependency

--- a/composer.json
+++ b/composer.json
@@ -81,6 +81,7 @@
         "symfony/http-foundation": "^5.2.0",
         "symfony/http-kernel": "^5.2.0",
         "symfony/intl": "^5.0.9",
+        "symfony/mailer": "^5.4.12",
         "symfony/messenger": "^5.3.0 || ^6.0.0",
         "symfony/mime": "^5.0.9",
         "symfony/options-resolver": "^5.0.9",
