FRW-229 - github actions verification

--- a/composer.json
+++ b/composer.json
@@ -1052,7 +1052,8 @@
         "spryker/zed-navigation-extension": "^1.0.0",
         "spryker/zed-request": "^3.17.0",
         "spryker/zed-request-extension": "^1.0.0",
-        "spryker/zed-ui": "^1.0.0"
+        "spryker/zed-ui": "^1.0.0",
+        "symfony/mailer": "^5.4.12"
     },
     "require-dev": {
         "codeception/codeception": "^5.0.2",
