--- a/.travis.yml
+++ b/.travis.yml
@@ -999,7 +999,7 @@ jobs:
               - docker/sdk boot -v deploy.ci.acceptance.mariadb.yml
               - travis_wait 100 docker/sdk up -t
               - docker/sdk testing console queue:worker:start --stop-when-empty
-              - docker/sdk testing codecept run -c codeception.acceptance.yml
+              - travis_wait 100 docker/sdk testing codecept run -c codeception.acceptance.yml
 
         - name: Docker / Alpine / PHP 8.0 / PostgreSQL / Acceptance
           <<: *DOCKER_BUILD_TEMPLATE
@@ -1012,7 +1012,7 @@ jobs:
               - docker/sdk boot -v deploy.ci.acceptance.yml
               - travis_wait 100 docker/sdk up -t
               - docker/sdk testing console queue:worker:start --stop-when-empty
-              - docker/sdk testing codecept run -c codeception.acceptance.yml
+              - travis_wait 100 docker/sdk testing codecept run -c codeception.acceptance.yml
 
         - name: Docker / Alpine / PHP 8.0 / PostgreSQL / Glue
           <<: *DOCKER_BUILD_TEMPLATE
@@ -1024,9 +1024,9 @@ jobs:
           script:
               - docker/sdk boot -v deploy.ci.api.yml
               - travis_wait 100 docker/sdk up -t -v
-              - docker/sdk testing codecept fixtures
+              - travis_wait 100 docker/sdk testing codecept fixtures
               - docker/sdk testing console queue:worker:start --stop-when-empty
-              - docker/sdk testing codecept run -c codeception.api.yml
+              - travis_wait 100 docker/sdk testing codecept run -c codeception.api.yml
 
         - name: Docker / Alpine / PHP 8.0 / MariaDB / Glue
           <<: *DOCKER_BUILD_TEMPLATE
@@ -1038,9 +1038,9 @@ jobs:
           script:
               - docker/sdk boot -v deploy.ci.api.mariadb.yml
               - travis_wait 100 docker/sdk up -t -v
-              - docker/sdk testing codecept fixtures
+              - travis_wait 100 docker/sdk testing codecept fixtures
               - docker/sdk testing console queue:worker:start --stop-when-empty
-              - docker/sdk testing codecept run -c codeception.api.yml
+              - travis_wait 100 docker/sdk testing codecept run -c codeception.api.yml
 
         - name: Docker / Alpine / PHP 8.0 / Frontend & Assets
           <<: *DOCKER_BUILD_TEMPLATE
@@ -1106,7 +1106,7 @@ jobs:
               - docker/sdk boot -v deploy.ci.acceptance.mariadb.yml
               - travis_wait 100 docker/sdk up -t
               - docker/sdk testing console queue:worker:start --stop-when-empty
-              - docker/sdk testing codecept run -c codeception.acceptance.yml
+              - travis_wait 100 docker/sdk testing codecept run -c codeception.acceptance.yml
 
         - name: Docker / Alpine / PHP 8.1 / PostgreSQL / Acceptance
           <<: *DOCKER_BUILD_TEMPLATE
@@ -1119,7 +1119,7 @@ jobs:
               - docker/sdk boot -v deploy.ci.acceptance.yml
               - travis_wait 100 docker/sdk up -t
               - docker/sdk testing console queue:worker:start --stop-when-empty
-              - docker/sdk testing codecept run -c codeception.acceptance.yml
+              - travis_wait 100 docker/sdk testing codecept run -c codeception.acceptance.yml
 
         - name: Docker / Alpine / PHP 8.1 / PostgreSQL / Glue
           <<: *DOCKER_BUILD_TEMPLATE
@@ -1131,9 +1131,9 @@ jobs:
           script:
               - docker/sdk boot -v deploy.ci.api.yml
               - travis_wait 100 docker/sdk up -t -v
-              - docker/sdk testing codecept fixtures
+              - travis_wait 100 docker/sdk testing codecept fixtures
               - docker/sdk testing console queue:worker:start --stop-when-empty
-              - docker/sdk testing codecept run -c codeception.api.yml
+              - travis_wait 100 docker/sdk testing codecept run -c codeception.api.yml
 
         - name: Docker / Alpine / PHP 8.1 / MariaDB / Glue
           <<: *DOCKER_BUILD_TEMPLATE
@@ -1145,9 +1145,9 @@ jobs:
           script:
               - docker/sdk boot -v deploy.ci.api.mariadb.yml
               - travis_wait 100 docker/sdk up -t -v
-              - docker/sdk testing codecept fixtures
+              - travis_wait 100 docker/sdk testing codecept fixtures
               - docker/sdk testing console queue:worker:start --stop-when-empty
-              - docker/sdk testing codecept run -c codeception.api.yml
+              - travis_wait 100 docker/sdk testing codecept run -c codeception.api.yml
 
         - name: Docker / Alpine / PHP 8.1 / Frontend & Assets
           <<: *DOCKER_BUILD_TEMPLATE
