FRW-606 Test commit

--- a/config/Shared/ci/travis/travis.php.ini
+++ b/config/Shared/ci/travis/travis.php.ini
@@ -1,2 +1,2 @@
 memory_limit = -1
-error_reporting = E_ALL & ~E_USER_DEPRECATED & ~E_DEPRECATED
+error_reporting = E_ALL ^ E_DEPRECATED ^ E_USER_DEPRECATED
