--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Spryker Suite (internal)",
     "license": "MIT",
     "require": {
-        "spryker/spryker": "dev-master",
+        "spryker/spryker": "dev-bugfix/frw-606/master-resolve-travis-build-errors",
         "spryker/spryker-shop": "dev-master",
         "spryker/install": "dev-master",
         "spryker/rabbit-mq": "dev-master",
