CC-21435: Configurable product tech debt  (#7195)
CC-21435 Configurable Product Tech Debt

--- a/tests/PyzTest/Glue/ProductConfigurations/codeception.yml
+++ b/tests/PyzTest/Glue/ProductConfigurations/codeception.yml
@@ -40,6 +40,7 @@ suites:
                 - \SprykerTest\Shared\CompanyUser\Helper\CompanyUserHelper
                 - \SprykerTest\Shared\ShoppingList\Helper\ShoppingListHelper
                 - \PyzTest\Glue\Auth\Helper\CompanyMailConnectorDependencyHelper
+                - \SprykerTest\Shared\PriceProduct\Helper\PriceProductDataHelper
             config:
                 \SprykerTest\Glue\Testify\Helper\GlueRest:
                     depends: PhpBrowser
