--- a/.travis.yml
+++ b/.travis.yml
@@ -998,7 +998,7 @@ jobs:
           script:
               - docker/sdk boot -v deploy.ci.acceptance.mariadb.yml
               - travis_wait 100 docker/sdk up -t
-              - docker/sdk testing console queue:worker:start --stop-when-empty
+              - travis_wait 100 docker/sdk testing console queue:worker:start --stop-when-empty
               - travis_wait 100 docker/sdk testing codecept run -c codeception.acceptance.yml
 
         - name: Docker / Alpine / PHP 8.0 / PostgreSQL / Acceptance
@@ -1011,7 +1011,7 @@ jobs:
           script:
               - docker/sdk boot -v deploy.ci.acceptance.yml
               - travis_wait 100 docker/sdk up -t
-              - docker/sdk testing console queue:worker:start --stop-when-empty
+              - travis_wait 100 docker/sdk testing console queue:worker:start --stop-when-empty
               - travis_wait 100 docker/sdk testing codecept run -c codeception.acceptance.yml
 
         - name: Docker / Alpine / PHP 8.0 / PostgreSQL / Glue
@@ -1025,7 +1025,7 @@ jobs:
               - docker/sdk boot -v deploy.ci.api.yml
               - travis_wait 100 docker/sdk up -t -v
               - travis_wait 100 docker/sdk testing codecept fixtures
-              - docker/sdk testing console queue:worker:start --stop-when-empty
+              - travis_wait 100 docker/sdk testing console queue:worker:start --stop-when-empty
               - travis_wait 100 docker/sdk testing codecept run -c codeception.api.yml
 
         - name: Docker / Alpine / PHP 8.0 / MariaDB / Glue
@@ -1039,7 +1039,7 @@ jobs:
               - docker/sdk boot -v deploy.ci.api.mariadb.yml
               - travis_wait 100 docker/sdk up -t -v
               - travis_wait 100 docker/sdk testing codecept fixtures
-              - docker/sdk testing console queue:worker:start --stop-when-empty
+              - travis_wait 100 docker/sdk testing console queue:worker:start --stop-when-empty
               - travis_wait 100 docker/sdk testing codecept run -c codeception.api.yml
 
         - name: Docker / Alpine / PHP 8.0 / Frontend & Assets
@@ -1105,7 +1105,7 @@ jobs:
           script:
               - docker/sdk boot -v deploy.ci.acceptance.mariadb.yml
               - travis_wait 100 docker/sdk up -t
-              - docker/sdk testing console queue:worker:start --stop-when-empty
+              - travis_wait 100 docker/sdk testing console queue:worker:start --stop-when-empty
               - travis_wait 100 docker/sdk testing codecept run -c codeception.acceptance.yml
 
         - name: Docker / Alpine / PHP 8.1 / PostgreSQL / Acceptance
@@ -1118,7 +1118,7 @@ jobs:
           script:
               - docker/sdk boot -v deploy.ci.acceptance.yml
               - travis_wait 100 docker/sdk up -t
-              - docker/sdk testing console queue:worker:start --stop-when-empty
+              - travis_wait 100 docker/sdk testing console queue:worker:start --stop-when-empty
               - travis_wait 100 docker/sdk testing codecept run -c codeception.acceptance.yml
 
         - name: Docker / Alpine / PHP 8.1 / PostgreSQL / Glue
@@ -1132,7 +1132,7 @@ jobs:
               - docker/sdk boot -v deploy.ci.api.yml
               - travis_wait 100 docker/sdk up -t -v
               - travis_wait 100 docker/sdk testing codecept fixtures
-              - docker/sdk testing console queue:worker:start --stop-when-empty
+              - travis_wait 100 docker/sdk testing console queue:worker:start --stop-when-empty
               - travis_wait 100 docker/sdk testing codecept run -c codeception.api.yml
 
         - name: Docker / Alpine / PHP 8.1 / MariaDB / Glue
@@ -1146,7 +1146,7 @@ jobs:
               - docker/sdk boot -v deploy.ci.api.mariadb.yml
               - travis_wait 100 docker/sdk up -t -v
               - travis_wait 100 docker/sdk testing codecept fixtures
-              - docker/sdk testing console queue:worker:start --stop-when-empty
+              - travis_wait 100 docker/sdk testing console queue:worker:start --stop-when-empty
               - travis_wait 100 docker/sdk testing codecept run -c codeception.api.yml
 
         - name: Docker / Alpine / PHP 8.1 / Frontend & Assets
