Removed US store.

--- a/deploy.valerii-terraform.yml
+++ b/deploy.valerii-terraform.yml
@@ -47,7 +47,7 @@ image:
         SPRYKER_HOOK_AFTER_DEPLOY: "true"
         SPRYKER_HOOK_INSTALL: "vendor/bin/install -r production --no-ansi -vvv"
         SPRYKER_HOOK_DESTRUCTIVE_INSTALL: "vendor/bin/install -r destructive --no-ansi -vvv"
-        AWS_REGION: 'eu-west-2'
+        AWS_REGION: 'eu-central-1'
     node:
         version: 16
         npm: 8
