FAAS-32: enabled data import of the store.

--- a/config/install/production.yml
+++ b/config/install/production.yml
@@ -50,4 +50,4 @@ sections:
 
     demodata:
         import-demodata:
-            command: 'vendor/bin/console data:import:stores'
+            command: 'vendor/bin/console data:import:store'
