--- a/deploy.valerii-terragrunt.yml
+++ b/deploy.valerii-terragrunt.yml
@@ -187,6 +187,8 @@ services:
         endpoints:
             mail.valerii-terragrunt.cloud.spryker.toys:
 docker:
+    maintenance:
+        enabled: true
     ssl:
         enabled: true
         redirect: true
