--- a/deploy.spryker-faas-speu.yml
+++ b/deploy.spryker-faas-speu.yml
@@ -3,7 +3,9 @@ version: '0.1'
 namespace: spryker-cloud
 tag: '1.0'
 
-environment: docker.dev
+environment: docker.prod
+pipeline: docker.acp
+
 image:
     tag: spryker/php:8.1
     php:
