--- a/deploy.spryker-faas-speu.yml
+++ b/deploy.spryker-faas-speu.yml
@@ -3,7 +3,7 @@ version: '0.1'
 namespace: spryker-cloud
 tag: '1.0'
 
-environment: docker
+environment: docker.prod
 
 image:
     tag: spryker/php:8.1
