SC-11505: Docker SDK: unable to run browser tests against Zed locally (#7398)
SC-11505 Docker SDK: unable to run browser tests against Zed locally

--- a/deploy.ci.functional.yml
+++ b/deploy.ci.functional.yml
@@ -134,6 +134,8 @@ services:
         csrf-protection-enabled: true
     mail_catcher:
         engine: mailhog
+    webdriver:
+        engine: chromedriver
 
 docker:
     ssl:
