--- a/deploy.ci.yml
+++ b/deploy.ci.yml
@@ -226,6 +226,8 @@ services:
         engine: mailhog
         endpoints:
             mail.night-test.cloud.spryker.toys:
+    webdriver:
+        engine: chromedriver
 
 docker:
     blackfire:
