--- a/deploy.dev.yml
+++ b/deploy.dev.yml
@@ -270,6 +270,8 @@ services:
         engine: dashboard
         endpoints:
             spryker.local:
+    webdriver:
+        engine: chromedriver
 
 docker:
     ssl:
