--- a/deploy.korax-dev.yml
+++ b/deploy.korax-dev.yml
@@ -194,6 +194,8 @@ services:
         engine: mailhog
         endpoints:
             mail.korax-dev.cloud.spryker.toys:
+    webdriver:
+        engine: chromedriver
 
 docker:
     blackfire:
