--- a/deploy.multi-db.yml
+++ b/deploy.multi-db.yml
@@ -266,6 +266,8 @@ services:
         engine: dashboard
         endpoints:
             spryker.local:
+    webdriver:
+        engine: chromedriver
 
 docker:
     ssl:
