--- a/deploy.spryker-69new.yml
+++ b/deploy.spryker-69new.yml
@@ -259,6 +259,8 @@ services:
         engine: mailhog
         endpoints:
             mail.69-new.demo-spryker.com:
+    webdriver:
+        engine: chromedriver
 
 docker:
     blackfire:
