--- a/deploy.spryker-staging.yml
+++ b/deploy.spryker-staging.yml
@@ -230,6 +230,8 @@ services:
         engine: mailhog
         endpoints:
             mail.staging.cloud.spryker.toys:
+    webdriver:
+        engine: chromedriver
 
 docker:
 
