--- a/deploy.aws-env-template.yml
+++ b/deploy.aws-env-template.yml
@@ -216,6 +216,8 @@ services:
         engine: mailhog
         endpoints:
             mail.example.cloud.spryker.toys:
+    webdriver:
+        engine: chromedriver
 
 docker:
     blackfire:
