--- a/deploy.ci.api.mariadb.yml
+++ b/deploy.ci.api.mariadb.yml
@@ -133,6 +133,8 @@ services:
         csrf-protection-enabled: true
     mail_catcher:
         engine: mailhog
+    webdriver:
+        engine: chromedriver
 
 docker:
     ssl:
