--- a/deploy.ci.functional.mariadb.yml
+++ b/deploy.ci.functional.mariadb.yml
@@ -135,6 +135,8 @@ services:
         csrf-protection-enabled: true
     mail_catcher:
         engine: mailhog
+    webdriver:
+        engine: chromedriver
 
 docker:
     ssl:
