--- a/deploy.spryker-scos.yml
+++ b/deploy.spryker-scos.yml
@@ -226,6 +226,8 @@ services:
         engine: mailhog
         endpoints:
             mail.scos.demo-spryker.com:
+    webdriver:
+        engine: chromedriver
 
 docker:
     blackfire:
