--- a/deploy.spryker-sns.yml
+++ b/deploy.spryker-sns.yml
@@ -259,6 +259,8 @@ services:
         engine: mailhog
         endpoints:
             mail.suite-nonsplit.demo-spryker.com:
+    webdriver:
+        engine: chromedriver
 
 docker:
     blackfire:
